# QA-AI-FineTunning

./: README.md  pyproject.toml  requirements-colab.txt
colab/: 01_train_gemma_qa.ipynb  02_test_gemma_qa.ipynb
data/playwright_gemma4_training_pack_v4_raw/: README_ko.md  bundle_builder.py  eval_raw.jsonl  labeling_guideline_ko.md  quality_report_raw_v4.json  raw_bundle_schema.json  train_raw.jsonl
data/playwright_gemma4_training_pack_v4_raw/samples/: eval_sample_1.json  eval_sample_2.json  train_sample_1.json  train_sample_2.json  train_sample_3.json
data/test_inputs/2026-04-17T09-38-00-6751880b/: crawl-graph.html  crawl-graph.json  crawl-graph.mmd  final-report.json  graph-snapshot.json
data/test_inputs/2026-04-17T09-38-00-6751880b/pages/p001_www_daum_net_/: annotation-legend.json  auto-dynamic-regions.json  final-report.json  frame-summary.json  initial-stabilization.json  next-queue.json  render-readiness.json  static.json  trigger-candidates.json
data/test_inputs/2026-04-17T09-38-00-6751880b/pages/p001_www_daum_net_/trigger-results/: trigger-1-diff-debug.json  trigger-1.json  trigger-12-diff-debug.json  trigger-12.json  trigger-13-diff-debug.json  trigger-13.json  trigger-17-diff-debug.json  trigger-17.json  trigger-29-diff-debug.json  trigger-29.json  trigger-3-diff-debug.json  trigger-3.json  trigger-36-diff-debug.json  trigger-36.json  trigger-37-diff-debug.json  trigger-37.json  trigger-38-diff-debug.json  trigger-38.json  trigger-39.json  (+23 more)
scripts/: smoke_test_train_notebook.py
src/qafinetune/: __init__.py  infer.py  io_utils.py  runtime.py  train.py
